# project8

./: .bandit  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  API_DOCUMENTATION.md  CHANGELOG_COVERAGE.md  CHANGELOG_PROXY.md  CLAUDE.md  ENV_VARIABLES.md  GEMINI.md  Makefile  PROXY_QUICKSTART.md  PROXY_USAGE_SUMMARY.md  README.md  README_HF.md  UI_DOCUMENTATION.md  clear_logs_gradio.py  coverage.json  example_proxy_usage.py  pyproject.toml  run_proxy.py  test_gradio_api.py  test_gradio_endpoints.py  test_hf_endpoints.py
.github/workflows/: cicd.yml  doc.yml
docker/: Dockerfile  Dockerfile.hf  README.md  docker-compose.yml
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  CLEAR_LOGS_ENDPOINT.md  COMPOSANTS.md  COVERAGE_AUTOMATION.md  COVERAGE_GUIDELINES.md  DIRECT_HTTP_ACCESS.md  ELASTIC.md  ENV_VARIABLES.md  FEATURE_ENGINEERING.md  MAKEFILE_GUIDE.md  ONNX_MIGRATION.md  PERFORMANCE_METRICS.md  PIPELINE.md  PROXY_DEPLOYMENT_HF.md  PROXY_DOCUMENTATION.md  PROXY_REFACTOR_SUMMARY.md  QUICK_START_HTTP_ACCESS.md  README.md  README_HF.md  ROUTER.md  SECURITY.md  SETUP_HF_TOKEN.md  TESTING_GRADIO_API.md  UI_DOCUMENTATION.md  conf.py  index.rst
docs/architecture/: architecture.rst  pipeline.rst
docs/guides/: docker.md  jmeter.md  model.md  proxy.md  scripts.md
docs/modules/: api.rst  logs_pipeline.rst  model.rst  simulator.rst  ui.rst
elasticsearch/: docker-compose.yml
jmeter/: .gitignore  API_Load_Test.jmx  README.md  run_load_test.sh
model/: MLmodel  README.md  conda.yaml  input_example.json  model.pkl  requirements.txt  serving_input_example.json  training_dataset.parquet
reports/: data_drift_report.html
scripts/: README.md  analyze_data_drift.py  check_api_coverage.py  check_pipeline_prerequisites.py  clear_elasticsearch_indexes.py  convert_to_onnx.py  deduplicate_elasticsearch.py  demo_performance_json.py  demo_redis_performance_logs.py  export_elasticsearch_to_parquet.py  generate_docs.py  get_logs_gradio.py  migrate_elasticsearch.py  test_api_startup.py  test_elasticsearch_indexes.py  test_log_parsing.py  test_performance_monitoring.py
src/: config.py  main.py
src/api/: PERFORMANCE_MONITORING.md  __init__.py  logging_config.py  main.py  performance_monitor.py  schemas.py
src/logs_pipeline/: ARCHITECTURE.md  README.md  __init__.py  __main__.py  collector.py  config.py  filter.py  indexer.py  pipeline.py
src/model/: __init__.py  feature_engineering.py  model_loader.py  model_pool.py  model_router.py  onnx_loader.py  predictor.py
src/proxy/: README.md  __init__.py  client.py  gradio_app.py
src/simulator/: README.md  __init__.py  __main__.py  drift_analyzer.py  simulator.py
src/ui/: __init__.py  __main__.py  api_routes.py  app.py  fastapi_app.py  logging_config.py
tests/: conftest.py  test_proxy.py
tests/api/: test_lifespan.py  test_logging_config.py  test_main.py  test_performance_monitoring.py  test_schemas.py
tests/logs_pipeline/: __init__.py  test_filter.py
tests/model/: test_feature_engineering.py  test_model_loader.py  test_model_pool.py  test_model_router.py  test_predictor.py
