[project]
name = "project8"
version = "0.1.0"
description = "Confirmez vos compétences en MLOps (Partie 2/2)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
"cloudpickle==3.1.1",
"fastapi>=0.115.0",
"imbalanced-learn==0.14.0",
"lightgbm==4.6.0",
"matplotlib==3.10.7",
"numpy==2.3.4",
"pandas==2.3.3",
"psutil==7.1.0",
"pydantic>=2.0.0",
"pyarrow==21.0.0",
"python-dotenv>=1.0.0",
"redis>=5.0.0",
"redis-log-handler>=0.2.0",
"scikit-learn==1.7.2",
"scipy==1.16.2",
"setuptools>=69.0.0",
"uvicorn[standard]>=0.30.0",
]

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",
    "W503",
    "E402",
    "E501",
]
exclude = [
    ".git",
    "__pycache__",
    ".venv", 
    "venv",
    ".jupyter",
    "alembic/versions",
    "migrations",
]
per-file-ignores = [
    "*.ipynb:E402",
    "alembic/*:E402,F401",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
]
