[project]
name = "project8"
version = "0.1.0"
description = "Confirmez vos compétences en MLOps (Partie 2/2)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloudpickle==3.1.1",
    "elasticsearch>=8.11.0,<9.0.0",
    "evidently>=0.4.0",
    "fastapi>=0.115.0",
    "gradio>=5.50.0",
    "gradio-client>=1.13.3",
    "imbalanced-learn==0.14.0",
    "lightgbm==4.6.0",
    "matplotlib==3.10.7",
    "numpy==2.3.4",
    "pandas==2.3.3",
    "psutil==7.1.0",
    "pydantic>=2.0.0",
    "pyarrow==21.0.0",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
    "requests>=2.31.0",
    "scikit-learn==1.7.2",
    "scipy==1.16.2",
    "setuptools>=69.0.0",
    "uvicorn[standard]>=0.30.0",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx-autodoc-typehints>=3.5.2",
    "myst-parser>=4.0.1",
    "onnxmltools>=1.14.0",
]

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",
    "W503",
    "E402",
    "E501",
]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".jupyter",
    "alembic/versions",
    "migrations",
]
per-file-ignores = [
    "*.ipynb:E402",
    "alembic/*:E402,F401",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "gradio-client>=1.13.3",
    "pre-commit>=4.4.0",
    "bandit>=1.9.1",
    "safety>=3.7.0",
    "skl2onnx>=1.19.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers"

[tool.coverage.run]
source = ["src"]
omit = [
    "src/ui/*",
    "src/main.py",
    "src/*/__init__.py",
    "src/simulator/*",
    "src/logs_pipeline/*",
    "src/proxy/gradio_app.py",
    "src/model/onnx_loader.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
# Seuil minimum de couverture globale
fail_under = 80
show_missing = true
precision = 2

# Configuration spécifique pour l'API (via pytest --cov=src/api)
[tool.coverage.paths]
source = [
    "src/",
    "*/src/",
]
